Test file modifications
Did some corrections to the test files